--- a/app/style/Icons.less
+++ b/app/style/Icons.less
@@ -107,6 +107,7 @@
 @lifecycle-05: url('@{icon-root}/lifecycle-05.png');
 @lifecycle-06: url('@{icon-root}/lifecycle-06.png');
 @launcher-logo: url('@{icon-root}/launcher-logo.svg');
+@small-logo:url('@{icon-root}/logo.svg');
 @logo: url('@{icon-root}/decred-logo.svg');
 @manage-pools-icon: url('@{icon-root}/tickets-manage-stakepools.svg');
 @max-fee-icon: url('@{icon-root}/max-fee.svg');
